<resources>
    <string name="app_name">Retos-Dispositivos-Moviles</string>
    <string name="texto__inscripcion">Formulario-Inscripcion</string>
    <string name="integrantes">Integrantes</string>
    <string name="CalcularEdad">Calcular Edad</string>
    <string name="derechosAutor">Derechos de autor Reservados</string>
    <string name="FechaNacimiento">Fecha de Nacimiento</string>
    <string name="calcularEdad">Calcular Edad</string>
    <string name="noSeleccionoFecha">No ha seleccionado ninguna fecha</string>
    <string name="fechaIgual">La fecha seleccionada es igual a la actual</string>
    <string name="fechaFutura">La fecha seleccionada no ha pasado</string>
    <string name="rios">Santiago Rios Rios</string>
    <string name="nombreDuver">Duver Carmona Ochoa</string>
    <string name="nombreAndres">Andres Garcia Atehortua</string>
    <string name="nombreRios">Santiago Rios Rios</string>
    <string name="faltaNombre">Falta el nombre</string>
    <string name="faltaApellido">Falta el apellido</string>
    <string name="faltaTelefono">Falta el Telefono</string>
    <string name="nombre_animal">inserte el nombre del animal</string>
    <string name="descripcion">inserte aqui la descripcion</string>
    <string name="animales">Lista Animales</string>
    <string name="buscar">Animales</string>
    <string name="parqueadero">Parqueadero</string>
    <string name="registroTarifas">Tarifas</string>
    <string name="registroVehiculos">Registrar Ingreso/Salida</string>
    <string name="generarReporte">Generar Reporte</string>
    <string name="listarVehiculos">Listar Vehiculos</string>
    <string name="TVregistroTarifa">Registrar Tarifas</string>
    <string name="guardarTarifa">Guardar</string>
    <string name="valorTarifa">Valor Tarifa</string>
    <string name="tipoTarifa">Fecha de Entrada</string>
    <string name="campoRequerido">Campo Vacio</string>
    <string name="campoMayorQueCero">Debe ser mayor que cero</string>
    <string name="insercionTarifa">Tarifa Creada con exito</string>
    <string name="listaTarifas">Lista Tarifas</string>
    <string name="sinTarifas">No hay tarifas registradas</string>
    <string name="placa">Placa</string>
    <string name="ingresarVehiculo">Ingresar</string>
    <string name="registrarSalida">Registrar Salida</string>
    <string name="buscarPlaca">Buscar</string>
    <string name="seleccionarTarifa">Debe selecionar una tarifa</string>
    <string name="registroExitoso">Ingreso Exitoso</string>
    <string name="salidaRegistrada">Salida Registrada</string>
    <string name="busqueVehiculo">Primero busque un vehiculo</string>
    <string name="cantidadHoras">Total Horas :</string>
    <string name="cantidadPagar">Total Cobro :</string>
    <string name="insertePlaca">Placa:</string>
    <string name="valorTotal">Total</string>
    <string name="vehiculosFacturados">Vehiculos que ingresaron</string>
    <string name="tipoTarifaIngreso">Tipo Tarifa</string>
    <string name="totalParqueadero">"Total: "</string>
    <string name="seleccioneFechaInicial">Fecha Inicial</string>
    <string name="sinVehiculos">No hay Vehiculos para listar</string>
    <string name="seleccionefechaFinal">Fecha Final</string>
    <string name="filtrar">Filtrar</string>
    <string name="seleccioneAmbasFechas">Por favor Seleccione ambas fechas</string>
    <string name="fechaInvalida">La fecha es hoy ó no pasado todavia</string>
</resources>