<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reto1.IntegrantesEquipo">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="179dp"
        android:layout_height="167dp"
        android:onClick="mostrarNombreDuver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/JakeSully"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:text="@string/nombreDuver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="222dp"
        android:layout_height="211dp"
        android:onClick="mostrarNombreRios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        app:srcCompat="@drawable/rios" />

    <TextView
        android:id="@+id/txtRios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/JakeSully"
        app:layout_constraintVertical_bias="0.301" />

    <ImageView
        android:id="@+id/imageViewAnimal"
        android:layout_width="162dp"
        android:layout_height="232dp"
        android:onClick="mostrarNombreAndres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        app:srcCompat="@drawable/andres" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/nombreAndres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRios"
        app:layout_constraintVertical_bias="0.654" />

</androidx.constraintlayout.widget.ConstraintLayout>